--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+"homepage": "http://Svetk0.github.io/english-study-app",
   "name": "english-study-app",
   "version": "0.1.0",
   "private": true,
